--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
 h1,
 p {
   font-size: 3rem;
+  margin: 0;
 }
 
 .App {
@@ -95,6 +96,20 @@ p {
   left: 0;
   top: 0;
   border-radius: 10px;
+}
+
+.skiptranslate{
+  position: absolute;
+  top: 20px;
+  right: 0;
+  padding: 20px;
+}
+
+.spinner {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @keyframes glowing {
